tests/paczka1/fuzzy1/75920494.err
Error in line 6: OzUx7FQf A796 98,3
Error in line 9: BkHz8VJ9IZu S2 54,3
Error in line 26: A796 A796 16,7
Error in line 16: DlXykkSeL A796 99,2
Error in line 29: DlXykkSeL S755 46,5
Error in line 28: A796 S766 36,7
Error in line 33: OzUx7FQf S755 78,7
Error in line 31: A796 S2 79,6
